css/style.css
/* ... */
@media (max-width:568px) {

	.home {
		overflow-y: scroll;
	}

    .name-block-container h1 span {
        font-size: 26px;
    }

    .name-block-container h1 {
        font-size: 36px;
    }

    .name-block-container h2 {
        font-size: 22px;
    }

    h2.menu-item {
        font-size: 20px;
        line-height: 2em;
		margin: 25px 0 25px 40px;
    }
	h2.menu-item:before {
		position: absolute;
		top: -20px;
		left: -20px;
		font-size: 14px;
	}
	h2.menu-item:after {
		display: none;
	}

    .social {
        display: none;
    }
	
	.project {
		width: 100%;
    }

    .inline-menu li {
        padding: 0 5px;
    }

    .d3Chart {
        display: none;
    }

    #close, #modal-close {
        font-size: 30px;
    }

    .content {
        padding: 100px 20px 0;
    }

    .poster, .project-media {
        margin: 0 -20px;
    }

    .challenges {
        padding: 0 20px 50px;
    }

    .section-step {
        padding: 0 20px;
    }

    .prototype {
        margin: 0 -20px;
    }
}

